crates/aven-check/tests/fixtures/check/invalid/qualified-operator-concrete-missing.av
Ordered = {
  <(Self): Bool
  ..
}

less = (left: t, right: t): Bool
  t: Ordered
=>
  left < right

invalid: Bool = less(true, false)
